# zklabubu-sp1

./: .gitignore  Cargo.toml  README.md  package.json  run-zklabubuio.sh  vercel.json
backend/: package.json  server.js
zklabubu_game/: Cargo.toml  package.json
zklabubu_game/pkg/: package.json  zklabubuio_game.d.ts  zklabubuio_game.js  zklabubuio_game_bg.wasm  zklabubuio_game_bg.wasm.d.ts
zklabubu_game/src/: entities.rs  game.rs  lib.rs  utils.rs
zklabubu_game/www/: index.html  index.js  package.json  sp1-bridge.js  webpack.config.js
zklabubu_proof/: rust-toolchain
zklabubu_proof/lib/: Cargo.toml
zklabubu_proof/lib/src/: lib.rs
zklabubu_proof/program/: Cargo.toml
zklabubu_proof/program/src/: main.rs
zklabubu_proof/script/: Cargo.toml  build.rs
