[package]
name = "zklabubuio_game"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A simple Labubu game with SP1 ZK Proof integration"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "HtmlImageElement",
    "HtmlAudioElement",
    "Event",
    "EventTarget",
    "Performance",
    "PerformanceTiming"
]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
opt-level = "s"
lto = true